# alchemiscale

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  NOTICE  README.md  environment.yml  local_testing.py  network.py  pyproject.toml  rever.xsh  service.py  setup.cfg  utils.py
.github/ISSUE_TEMPLATE/: feature_request.md  user_story.md
.github/workflows/: black.yaml  black.yml  ci-integration.yml  deploy-conda-envs.yml  deploy-docker.yml  docker.yaml  docs.yml
alchemiscale/: __init__.py  _pydantic.py  _version.py  cli.py  cli_utils.py  compression.py  keyedchain.py  models.py  settings.py  sleep.py  utils.py  validators.py
alchemiscale/base/: api.py  client.py
alchemiscale/compute/: __init__.py  api.py  capture.py  client.py  environment.py  execute.py  filestorage.py  manager.py  monitor.py  service.py  settings.py  signals.py
alchemiscale/interface/: __init__.py  api.py  client.py
alchemiscale/migrations/: v03_to_v04.py  v04_to_v05.py  v07_to_v08.py
alchemiscale/protocols/: nonequilibrium_cycling.py
alchemiscale/security/: auth.py  models.py
alchemiscale/storage/: cypher.py  data.py  models.py  objectstore.py  statestore.py  subgraph.py
alchemiscale/strategies/: __init__.py  base.py
alchemiscale/strategist/: __init__.py  service.py  settings.py
alchemiscale/tests/integration/: conftest.py  test_cli.py  utils.py
alchemiscale/tests/integration/compute/: conftest.py  test_compute_api.py  utils.py
alchemiscale/tests/integration/compute/client/: conftest.py  test_compute_client.py  test_compute_manager.py  test_compute_manager_client.py  test_compute_service.py  test_manager_client.py
alchemiscale/tests/integration/interface/: conftest.py  test_api.py  utils.py
alchemiscale/tests/integration/interface/client/: conftest.py  test_client.py  test_client_introspection.py
alchemiscale/tests/integration/storage/: test_objectstore.py  test_objectstore_introspection.py  test_statestore.py  test_statestore_introspection.py  utils.py
alchemiscale/tests/integration/strategist/: test_strategist_service.py
alchemiscale/tests/unit/: conftest.py  test_base_api.py  test_client_params.py  test_cypher.py  test_introspection_records.py  test_keyedchain.py  test_models.py  test_security.py  test_storage_models.py  test_utils.py  test_validators.py
alchemiscale/tests/unit/compute/: test_async_service.py  test_capture.py  test_environment.py  test_execute_equivalence.py  test_manager.py  test_settings.py  test_signals.py
devtools/conda-envs/: alchemiscale-client.yml  alchemiscale-compute.yml  alchemiscale-server.yml  client.yml  dev.yml  docker.yml  docs.yml  test.yml
devtools/configs/: asynchronous-compute-settings.yaml  strategist-settings.yaml  synchronous-compute-settings.yaml
docker/: .env  .env.template  .env.testing  Dockerfile  README.md  docker-compose.yml
docker/alchemiscale-compute/: Dockerfile
docker/alchemiscale-server/: .env.template  .env.testing  Dockerfile  README.md  docker-compose.yml
docker/alchemiscale-server/config/: strategist-config.yaml
docs/: API_docs.rst  CHANGELOG.rst  api.rst  api_docs.rst  compute.rst  conf.py  contents.rst  deployment.rst  development.rst  index.rst  operations.rst  overview.rst  strategy_guide.rst  user_guide.rst
docs/api/: base.rst  cli.rst  compute.rst  interface.rst  models.rst  security.rst  settings.rst  storage.rst  strategist.rst
docs/documentation_pages/: base.rst  cli.rst  compute.rst  interface.rst  models.rst  protocols.rst  security.rst  settings.rst  storage.rst  strategies.rst  strategist.rst
docs/tutorials/: Preparing AlchemicalNetworks.ipynb  index.rst
docs/tutorials/demo/: Alchemiscale Demo.ipynb
docs/user_guide/: getting_started.rst  handling_errors.rst  index.rst  introspection.rst  merging_and_copying_networks.rst  strategy_automation.rst
fah_alchemy/: __init__.py  _version.py  cli.py  client.py  edges.py  models.py  network.py  nodes.py  protocols.py  settings.py
fah_alchemy/api/: app.py  models.py
fah_alchemy/base/: api.py  client.py
fah_alchemy/compute/: __init__.py  api.py  client.py  server.py  service.py
fah_alchemy/interface/: __init__.py  api.py  client.py
fah_alchemy/protocols/: __init__.py  nonequilibrium_cycling.py
fah_alchemy/security/: auth.py  models.py
fah_alchemy/storage/: __init__.py  metadatastore.py  models.py  objectstore.py  statestore.py
fah_alchemy/storage/compute/: app.py
fah_alchemy/strategies/: base.py
fah_alchemy/strategist/: service.py
fah_alchemy/tests/integration/: conftest.py  test_cli.py  test_compute_api.py  test_storage.py  utils.py
fah_alchemy/tests/integration/compute/: conftest.py  test_api.py  test_compute_api.py  test_compute_service.py  test_service.py  utils.py
fah_alchemy/tests/integration/compute/client/: conftest.py  test_compute_client.py  test_compute_service.py
fah_alchemy/tests/integration/interface/: conftest.py  test_api.py  utils.py
fah_alchemy/tests/integration/interface/client/: conftest.py  test_client.py
fah_alchemy/tests/integration/storage/: test_objectstore.py  test_statestore.py
fah_alchemy/tests/unit/: test_base_api.py  test_models.py  test_security.py
news/: claim_request_deny.rst  compute_managers.rst  driver-notifications.rst  get_transformation_chemicalsystems_ordering.rst  issue-106.rst  issue-195.rst  issue-211.rst  issue-221.rst  issue-222.rst  issue-246.rst  issue-295.rst  issue-347.rst  issue-349.rst  issue-389.rst  issue-415.rst  issue-474.rst  issue-503.rst  issue-504.rst  keyed_chain_network_submission.rst  keyed_chain_tokenizable_retrieval.rst  pr-467.rst  strategist_service.rst
