[build-system]
requires = [
    "setuptools>=61.2",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "alchemiscale"
description = ""
readme = "README.md"
authors = [{name = "OpenFE and OpenFF developers"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">= 3.9"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/openforcefield/alchemiscale"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
]

[project.scripts]
alchemiscale = "alchemiscale.cli:cli"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}
# [options.package_data]
# openfe = "./openfe/tests/data/lomap_basic/toluene.mol2"

[tool.mypy]
files = ["alchemiscale"]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*/_version.py",
    "alchemiscale/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: no-cover",
    "-no-cov",
    "raise NotImplementedError",
    '\.\.\.',
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"
