[build-system]
requires = [
    "setuptools>=77.0.3",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "alchemiscale"
description = "a high-throughput alchemical free energy execution system for use with HPC, cloud, bare metal, and Folding@Home"
readme = "README.md"
authors = [{name = "OpenFE and OpenFF developers"}]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">= 3.10"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/OpenFreeEnergy/alchemiscale"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
]

[project.scripts]
alchemiscale = "alchemiscale.cli:cli"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}
# [options.package_data]
# openfe = "./openfe/tests/data/lomap_basic/toluene.mol2"

[tool.mypy]
files = ["alchemiscale"]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*/_version.py",
    "alchemiscale/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: no-cover",
    "-no-cov",
    "raise NotImplementedError",
    '\.\.\.',
]

[tool.setuptools_scm]
fallback_version = "0.0.0"
