[metadata]
name = fah_alchemy
description = 
long_description = file: README.md
long_description_type = text/markdown
author = OpenFE and OpenFF developers
#author_email = 
license = MIT
license_file = LICENSE
url = https://github.com/openforcefield/fah-alchemy
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
zip_safe = False
python_requires = >= 3.9
include_package_data = True
packages = find:

#[options.package_data]
#openfe = "./openfe/tests/data/lomap_basic/toluene.mol2"

[options.extras_require]
test =
    pytest
    pytest-xdist

[options.entry_points]
console_scripts = 
    fah-alchemy = fah_alchemy.cli:cli

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440-post
versionfile_source = fah_alchemy/_version.py
versionfile_build = fah_alchemy/_version.py
tag_prefix = ''

[mypy]
files=fah_alchemy
ignore_missing_imports=true
